# serializer version: 1
# name: test_aircon_set_hvac_mode[cool-COOL]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'COOL',
      'AUTO',
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[dry-DRY]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'DRY',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[fan_only-FAN]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      None,
      None,
      'AIR_CONDITIONING',
      'ON',
      'FAN',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[heat-HEAT]
  _Call(
    tuple(
      3,
      'NEXT_TIME_BLOCK',
      24.76,
      None,
      'AIR_CONDITIONING',
      'ON',
      'HEAT',
      'AUTO',
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
# name: test_aircon_set_hvac_mode[off-OFF]
  _Call(
    tuple(
      3,
      'MANUAL',
      None,
      None,
      'AIR_CONDITIONING',
      'OFF',
    ),
    dict({
    }),
  )
# ---
# name: test_entities[climate.air_conditioning_air_conditioning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'high',
        'medium',
        'low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioning_air_conditioning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 409>,
    'translation_key': 'tado',
    'unique_id': 'AIR_CONDITIONING 3 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.air_conditioning_air_conditioning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60.9,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.8,
      'default_overlay_seconds': None,
      'default_overlay_type': 'MANUAL',
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'high',
        'medium',
        'low',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioning',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.COOLING: 'cooling'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      'offset_celsius': -1.0,
      'offset_fahrenheit': -1.8,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 409>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 17.8,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioning_air_conditioning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_entities[climate.air_conditioning_with_fanlevel_air_conditioning_with_fanlevel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'high',
        'medium',
        'auto',
        'low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'vertical',
        'horizontal',
        'both',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioning_with_fanlevel_air_conditioning_with_fanlevel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': 'tado',
    'unique_id': 'AIR_CONDITIONING 6 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.air_conditioning_with_fanlevel_air_conditioning_with_fanlevel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 70.9,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 24.3,
      'default_overlay_seconds': None,
      'default_overlay_type': 'MANUAL',
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'high',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'high',
        'medium',
        'auto',
        'low',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioning with fanlevel',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 441>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'both',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'vertical',
        'horizontal',
        'both',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 25.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioning_with_fanlevel_air_conditioning_with_fanlevel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_entities[climate.air_conditioning_with_swing_air_conditioning_with_swing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'high',
        'medium',
        'low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioning_with_swing_air_conditioning_with_swing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': 'tado',
    'unique_id': 'AIR_CONDITIONING 5 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.air_conditioning_with_swing_air_conditioning_with_swing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 42.3,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.9,
      'default_overlay_seconds': None,
      'default_overlay_type': 'MANUAL',
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'high',
        'medium',
        'low',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air Conditioning with swing',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      'offset_celsius': -1.0,
      'offset_fahrenheit': -1.8,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 441>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'off',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioning_with_swing_air_conditioning_with_swing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_entities[climate.baseboard_heater_baseboard_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.baseboard_heater_baseboard_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'tado',
    'unique_id': 'HEATING 1 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.baseboard_heater_baseboard_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 45.2,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.6,
      'default_overlay_seconds': None,
      'default_overlay_type': 'MANUAL',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Baseboard Heater',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      'offset_celsius': -1.0,
      'offset_fahrenheit': -1.8,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'away',
        'home',
        'auto',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.baseboard_heater_baseboard_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_heater_set_temperature
  _Call(
    tuple(
      1,
      'NEXT_TIME_BLOCK',
      22.0,
      None,
      'HEATING',
      'ON',
      'HEAT',
      None,
      None,
      None,
      None,
      None,
    ),
    dict({
    }),
  )
# ---
